fixed error where text was too small for mobile views

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ div {
 #map {
     border-style: groove;
     border-color: beige;
-    min-height: 70vh;
+    min-height: 60vh;
     min-width: 95vw;
     position: fixed;
     margin: 10px;
@@ -49,7 +49,6 @@ header {
     background-color: blanchedalmond;
     
     width: 100%;
-    position: fixed;
     top: 0px;
     font-weight: 900;
     margin: 0px;
@@ -59,21 +58,14 @@ header {
     flex: column;
     align-items: center;
     justify-content: center;
-    
+    position: fixed;
 }
 
 h1 {
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    background-image: url('background.jpeg');
-    background-attachment: fixed;
-    background-size: cover;
+    color: rgb(37, 65, 37);
     text-align: center;
-    
 
     letter-spacing: 10 px; 
-    text-overflow: ellipsis;
     overflow: hidden;
     
     
@@ -94,8 +86,7 @@ h1 {
 }
 
 #journalUI {
-    display: grid;
-    grid-template-columns: 2fr 3fr 2fr;
+    display: flex;
     width: 85vw;
     gap: 10px;
     min-height: 10vh;
@@ -112,20 +103,13 @@ h1 {
     min-height: 10vh;
     scroll-snap-type: x mandatory;
     scroll-snap-align: center;
+    min-width: 30vw;
     
    
 }
 
 .log {
-/*
-    
-    
-    text-align: center;
-    overflow-wrap: normal;
-    
-    background-color: bisque;
-    overflow-y: scroll;
-    */
+
     background-color: rgba(255, 248, 238, 0.786);
     border-radius: 25px;
     flex: 0 0 auto;
@@ -135,6 +119,8 @@ h1 {
     scroll-snap-align: center;
     max-height: 15vh;
     overflow-y: scroll;
+    overflow-x: hidden;
+    
     
 
 
@@ -155,6 +141,7 @@ h1 {
     
     text-align: justify;
     text-indent: 10px;
+    flex: 3;
 
 }
 
@@ -172,11 +159,13 @@ h1 {
     letter-spacing: 1px;
     padding-left: 10px;
     padding-bottom: 0px;
+    font-size: calc(8px + 1.5vw);
     
 }
 
 #firstday, #currentday {
     display: flex;
+    flex: 2;
 }
 
 
@@ -184,8 +173,9 @@ html {
     height: 100%;
     width: 100%;
     margin: 0;
-    overflow: hidden;
     background-color: rgba(37, 65, 37, 0.53);
+    overflow: hidden;
+
     
     
 }
